[package]
name = "solana-tss"
version = "0.1.0"
edition = "2018"

[dependencies]
solana-client = "1"
solana-sdk = "1"
spl-memo = "3"
structopt = "0.3"
bs58 = "0.4"
rand = "0.7"
ed25519-dalek = "1"
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git", branch = "curv-0.9" }
curv = {package = "curv-kzen", version = "0.9" }
bincode = "1"
hex = "0.4"
serde = {version = "1", features = ["derive"] }
sha2 = "0.9"