[package]
name = "solana-tss"
version = "0.1.0"
edition = "2018"

[dependencies]
solana-client = "1"
solana-sdk = "1"
spl-memo = "3"
structopt = "0.3"
bs58 = "0.4"
rand08 = { package = "rand", version =  "0.8" }
rand07 = { package = "rand", version =  "0.7" }
ed25519-dalek = "1"
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git", rev = "657eb20356b82ffa50c98a21f28b79b06432c2d9" }
curv = {package = "curv-kzen", version = "0.9" }
sha2 = "0.9"


[dev-dependencies]
solana-test-validator = "1"
solana-streamer = "1"